--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,24 +1,28 @@
 <%- include("header") -%>
 
   <div class="box" id="heading">
-    <h1> <%= listTitle %> </h1>
+    <h1>
+      <%= listTitle %>
+    </h1>
   </div>
-
-  <% newListItems.forEach((item) => { %>
-    <form action="/delete" method="POST">
-      <div class="item">
-        <input type="checkbox" name="checkbox" >
-        <p>1</p>
-        <p> <%= item.name %></p>
-      </div>
-    </form>
-  <% }) %>
 
   <div class="box">
-      <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-        <button type="submit" name="list" value="<%=listTitle %>">+</button>
+    <% newListItems.forEach((item)=> { %>
+      <form action="/delete" method="POST">
+        <div class="item">
+          <input type="checkbox" name="checkbox" value="<%=item.id%>" onchange="this.form.submit()">
+          <p>
+            <%= item.name %>
+          </p>
+        </div>
+        <input type ="hidden" name="listTitle" value="<%=listTitle %>">
       </form>
+      <% }) %>
+
+        <form class="item" action="/" method="post">
+          <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+          <button type="submit" name="list" value="<%=listTitle %>">+</button>
+        </form>
   </div>
 
-<%- include("footer") -%>
+  <%- include("footer") -%>
